--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,11 @@
+Version 1.16.1  (02 Nov 2016)
+
+    - Updated OLFS configuration defaults in viewers.xml file to reflect changes for ncWMS2 and Godiva3
+    
+    - Patched a problem with the way the XSL transforms are carried out that could have left the 
+      process running in an unexpected directory.
+      
+
 Version 1.16.0  (06 June 2016)
 
  -  Added code to ammend the CF "history" attribute so that fileout_netcdf responses contain the ammended
@@ -16,9 +24,6 @@ Version 1.16.0  (06 June 2016)
  -  Bug fixes
     - Large file issues in w10n.
     - Fixed build for WCS-2.0
-
-
-
 
 
 Version 1.15.0  (08 February 2016)
