--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,55 @@
-2016-11-03 ---  hyrax=1.13.2 olfs=1.16.1  END 
+2016-12-03	---  hyrax=1.13.3 olfs=1.16.2 END
+2016-12-03  ndp-opendap  <ndp@opendap.org>
+
+	olfs: Fixing problems with debug logging configuration..
+
+2016-12-01  ndp-opendap  <ndp@opendap.org>
+
+	olfs: Added NewPPTClient to debug logging profile.
+
+2016-11-30  ndp-opendap  <ndp@opendap.org>
+
+	Merge branch 'master' of https://github.com/opendap/olfs
+
+	eowcs: Replaced missing definition of entity FORMAT..
+
+	eowcs: Fixed small bug in request document lifecycle.
+
+2016-11-16  Nathan Potter  <ndp@opendap.org>
+
+	olfs: Removed spurious message from error log.
+
+	olfs:   Patched NullPointerException bug in AggregationServlet.java
+
+2016-11-11  Nathan Potter  <ndp@opendap.org>
+
+	olfs:   Method Attribution
+
+	olfs: Added a missing attribution.
+
+2016-11-09  ndp-opendap  <ndp@opendap.org>
+
+	olfs: Repaired viewers.xml configuration for Godiva3
+
+	olfs: Trying to resolve Java version issues with ConcurrentHashMap
+
+2016-11-08  ndp-opendap  <ndp@opendap.org>
+
+	more logging goodness
+
+	olfs: Logging improvements
+
+	Fixing log config
+
+2016-11-04  ndp-opendap  <ndp@opendap.org>
+
+	Fixing fonc history attr, again...
+
+2016-11-03  Nathan Potter  <ndp@opendap.org>
+
+	Updating change log.
+
+2016-11-03 ---  hyrax=1.13.2 olfs=1.16.1  END
 2016-11-03  Nathan Potter  <ndp@opendap.org>
 
     Added some release helper scripts.
@@ -6,7 +57,7 @@
 2016-11-02  Nathan Potter  <ndp@opendap.org>
 
     olfs:   Dropped duplicate server name from fnoc history attribute entry.
-    
+
 	Updating OLFS baselines to rflect minor changes in BES error message content.
 
 2016-10-31  Nathan Potter  <ndp@opendap.org>
