--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,15 @@
+Version 1.16.2 (10 Jan 2017)
+
+- Improved logging, including log rotation.
+
+- Fixed a null pointer exception in the AggregationServlet (the component
+  that performs user-specified aggragtions).
+
+- Repaired viewers.xml configuration for Godiva3
+
+- Issues with the netcdf file response History attribute were fixed, once
+  again...
+
 Version 1.16.1  (02 Nov 2016)
 
     - Updated OLFS configuration defaults in viewers.xml file to reflect changes for ncWMS2 and Godiva3
