--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+Version 1.16.3 (05 Jun 2017)
+
+- Server timeout conditions now return HTTP status 504 (and not 418).
+
+- Bug fixes in the DAP4 Data Request Form pages.
+
 Version 1.16.2 (10 Jan 2017)
 
 - Improved logging, including log rotation.
